--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,11 +123,11 @@ services:
             - 7474:7474
             - 7687:7687
         volumes:
-            - {YOUR_LOCAL_DIR}/conf:/conf
-            - {YOUR_LOCAL_DIR}/data:/data
-            - {YOUR_LOCAL_DIR}/import:/import
-            - {YOUR_LOCAL_DIR}/logs:/logs
-            - {YOUR_LOCAL_DIR}/plugins:/plugins
+            - YOUR_LOCAL_DIR/conf:/conf
+            - YOUR_LOCAL_DIR/data:/data
+            - YOUR_LOCAL_DIR/import:/import
+            - YOUR_LOCAL_DIR/logs:/logs
+            - YOUR_LOCAL_DIR/plugins:/plugins
         environment: 
             - NEO4J_dbms_memory_pagecache_size=1G
             - NEO4J_dbms.memory.heap.initial_size=1G
