--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,23 +4,23 @@ x-common-variables: &common-variables
     HEALTH_TOPIC: "health_report"
     IOC_TOPIC: "ioc"
     REPORT_TOPIC: "rfreport"
-    KAFKA_SERVER: "{YOUR_IP}:9092"
+    KAFKA_SERVER: "${YOUR_IP}:9092"
     SYS_VERSION: "0.1.1"
     PYTHONUNBUFFERED: 1
 x-common-variables: &GITLAB
-    GITLAB_SERVER: "http://{YOUR_IP}:10080"
-    GITLAB_TOKEN: "{YOUR_GITLAB_TOKEN}"
-    GITLAB_REPO_NAME: "{YOUR_REPONAME}"
+    GITLAB_SERVER: "http://${YOUR_IP}:10080"
+    GITLAB_TOKEN: "${YOUR_GITLAB_TOKEN}"
+    GITLAB_REPO_NAME: "${YOUR_REPONAME}"
 x-common-variables: &APIKEYS
-    VIRUS_TOTAL: "" 
+    VIRUS_TOTAL: "${YOUR_VT_TOKEN}"
 x-common-variables: &MISP
-    MISP_SERVER: "https://{YOUR_IP}:443"
-    MISP_TOKEN: "{YOUR_MISP_TOKEN}"
+    MISP_SERVER: "https://${YOUR_IP}:443"
+    MISP_TOKEN: "${YOUR_MISP_TOKEN}"
     MISP_VERIF: "False"
 x-common-variables: &NEO4J
-    NEO_SERVER: "http://{YOUR_IP}:7474"
+    NEO_SERVER: "http://${YOUR_IP}:7474"
     NEO_USER: "neo4j"
-    NEO_PASSWORD: "{YOUR_PASSWORD}"
+    NEO_PASSWORD: "${YOUR_PASSWORD}"
 services:
     zookeeper:
         image: wurstmeister/zookeeper
@@ -33,7 +33,7 @@ services:
         ports:
             - "9092:9092"
         environment: 
-            KAFKA_ADVERTISED_HOST_NAME: {YOUR_IP}
+            KAFKA_ADVERTISED_HOST_NAME: ${YOUR_IP}
             KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     sysmon:
         build:
@@ -68,7 +68,7 @@ services:
         environment: 
             <<: *common-variables
             <<: *MISP
-        SERVICENAME: "Analyser"
+            SERVICENAME: "Analyser"
     scraper:
         build:
             context: .
@@ -78,7 +78,7 @@ services:
             - "8086:8086"
         environment: 
             <<: *common-variables
-        SERVICENAME: "Scraper"
+            SERVICENAME: "Scraper"
     pusher:
         build:
             context: .
@@ -123,11 +123,11 @@ services:
             - 7474:7474
             - 7687:7687
         volumes:
-            - YOUR_LOCAL_DIR/conf:/conf
-            - YOUR_LOCAL_DIR/data:/data
-            - YOUR_LOCAL_DIR/import:/import
-            - YOUR_LOCAL_DIR/logs:/logs
-            - YOUR_LOCAL_DIR/plugins:/plugins
+            - ${YOUR_LOCAL_DIR}/conf:/conf
+            - ${YOUR_LOCAL_DIR}/data:/data
+            - ${YOUR_LOCAL_DIR}/import:/import
+            - ${YOUR_LOCAL_DIR}/logs:/logs
+            - ${YOUR_LOCAL_DIR}/plugins:/plugins
         environment: 
             - NEO4J_dbms_memory_pagecache_size=1G
             - NEO4J_dbms.memory.heap.initial_size=1G
