placed environment variables in docker-compose

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ YOUR_MISP_TOKEN=test
 YOUR_PASSWORD=test
 YOUR_REPONAME=test
 YOUR_VT_TOKEN=test
+TWITTER_CONSUMER_KEY=test
+TWITTER_CONSUMER_KEY_SECRET=test
+TWITTER_ACCESS_TOKEN=test
+TWITTER_ACCESS_TOKEN_SECRET=test
+TWEET_COUNT=300 (default number of the amount of tweets)
+LEAKIX_API_KEY=test
