--- a/requirements.txt
+++ b/requirements.txt
@@ -20,9 +20,11 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 jsonschema==3.2.0
 kafka-python==2.0.2
+lxml==4.6.3
 markdown-tree-parser==0.1
 MarkupSafe==1.1.1
 mdutils==1.3.0
+oauthlib==3.1.1
 pdfminer==20191125
 pendulum==1.2.5
 Pillow==8.2.0
@@ -34,6 +36,7 @@ pymisp==2.4.141.1
 pyparsing==2.4.7
 PyPDF2==1.26.0
 pyrsistent==0.17.3
+PySocks==1.7.1
 python-dateutil==2.8.1
 python-gitlab==2.6.0
 pytz==2021.1
@@ -41,10 +44,12 @@ pytzdata==2020.1
 PyYAML==5.4.1
 regex==2021.4.4
 requests==2.25.1
+requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
 six==1.15.0
 soupsieve==2.2.1
 termcolor==1.1.0
+tweepy==3.10.0
 tzlocal==2.1
 urllib3==1.26.4
 Werkzeug==1.0.1
