Provide MISP integration in docker-compose

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,16 @@ TWITTER_ACCESS_TOKEN=test
 TWITTER_ACCESS_TOKEN_SECRET=test
 TWEET_COUNT=300 (default number of the amount of tweets)
 LEAKIX_API_KEY=test
+
+MYSQL_HOST=misp-db
+MYSQL_DATABASE=misp
+MYSQL_USER=misp
+MYSQL_PASSWORD=misp
+MYSQL_ROOT_PASSWORD=misp
+
+MISP_ADMIN_EMAIL=admin@admin.test
+MISP_ADMIN_PASSPHRASE=admin
+MISP_BASEURL=https://localhost:8087
+
+POSTFIX_RELAY_HOST=relay.fqdn
+TIMEZONE=Europe/Brussels
