Provide gitlab container

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,10 @@ MYSQL_USER=misp
 MYSQL_PASSWORD=misp
 MYSQL_ROOT_PASSWORD=misp
 
+GITLAB_FQDN=localhost
+GITLAB_BASEURL=https://localhost:8085
+GITLAB_INIT_ROOTPW=5iveL!fe
+
 MISP_ADMIN_EMAIL=admin@admin.test
 MISP_ADMIN_PASSPHRASE=admin
 MISP_BASEURL=https://localhost:8087
