Add option to disable gitlab certificate checking

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ x-common-variables: &GITLAB
     GITLAB_SERVER: ${GITLAB_BASEURL}
     GITLAB_TOKEN: ${YOUR_GITLAB_TOKEN}
     GITLAB_REPO_NAME: ${YOUR_REPONAME}
+    GITLAB_VERIF: "False"
 x-common-variables: &APIKEYS
     VIRUS_TOTAL: ${YOUR_VT_TOKEN}
     LEAKIX: ${LEAKIX_API_KEY}
