Make valid yaml.
Yaml Keys must be unique. Reusing the key x-comon-variables causes syntax errors when using e.g. portainer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,22 +8,22 @@ x-common-variables: &common-variables
     KAFKA_SERVER: ${YOUR_IP}:9092
     SYS_VERSION: "0.1.1"
     PYTHONUNBUFFERED: 1
-x-common-variables: &GITLAB
+x-gitlab: &GITLAB
     GITLAB_SERVER: http://${YOUR_IP}:10080
     GITLAB_TOKEN: ${YOUR_GITLAB_TOKEN}
     GITLAB_REPO_NAME: ${YOUR_REPONAME}
-x-common-variables: &APIKEYS
+x-apikeys: &APIKEYS
     VIRUS_TOTAL: ${YOUR_VT_TOKEN}
     LEAKIX: ${LEAKIX_API_KEY}
-x-common-variables: &MISP
+x-misp: &MISP
     MISP_SERVER: https://${YOUR_IP}:443
     MISP_TOKEN: ${YOUR_MISP_TOKEN}
     MISP_VERIF: "False"
-x-common-variables: &NEO4J
+x-neo4j: &NEO4J
     NEO_SERVER: "http://${YOUR_IP}:7474"
     NEO_USER: "neo4j"
     NEO_PASSWORD: ${YOUR_PASSWORD}
-x-common-variables: &TWITTER
+x-twitter: &TWITTER
     TWEET_COUNT: ${TWEET_COUNT}
     TWITTER_CONSUMER_KEY: ${TWITTER_CONSUMER_KEY}
     TWITTER_CONSUMER_KEY_SECRET: ${TWITTER_CONSUMER_KEY_SECRET}
