added datasets in Dockerfile

--- a/iocextractor/Dockerfile
+++ b/iocextractor/Dockerfile
@@ -4,6 +4,7 @@ FROM python:3.8
 WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
+ADD ./datasets ./datasets
 ADD ./iocextractor ./iocextractor
 ADD ./libs ./libs
 ADD ./extensions ./extensions
