--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,8 +19,8 @@ jobs:
               with:
                 python-version: "${{ matrix.python-version }}"
             - name: "Install dependencies"
-            - run: pip install -r requirements.txt
+              run: pip install -r requirements.txt
             
             - name: "Running the linter"
-            - run: pylint *
+              run: pylint *
 
