--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,7 +12,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                python-version: [3.8, 3.9]
+                python-version: [3.9]
         steps:
             - name: Install Python dependencies
               uses: py-actions/py-dependency-install@v2
