--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,12 +15,11 @@ jobs:
                 python-version: [3.9]
         steps:
             - name: Install Python dependencies
-              uses: py-actions/py-dependency-install@v2
-              with:
-                update-pip: "false"
-                update-setuptools: "false"
-                update-wheel: "false"
-            
+              run: |
+                python -m pip install --upgrade pip
+                pip install flake8 pytest
+                if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
             - name: "Running the linter"
               run: pylint *
 
