--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,8 +17,7 @@ jobs:
             - name: Install Python dependencies
               run: |
                 python -m pip install --upgrade pip
-                pip install flake8 pytest
-                if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+                pip install flake8 pytest pylint
 
             - name: "Running the linter"
               run: pylint *
