--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,7 +8,7 @@ on:
             - dev
             - master
 jobs:
-    linter:
+    pylint:
         runs-on: ubuntu-latest
         strategy:
             matrix:
@@ -17,8 +17,8 @@ jobs:
             - name: Install Python dependencies
               run: |
                 python -m pip install --upgrade pip
-                pip install flake8 pytest pylint
+                pip install pylint
 
             - name: "Running the linter"
-              run: pylint *
+              run: pylint ./*
 
