--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,11 +19,11 @@ jobs:
         - name: Install dependencies
           run: |
             python -m pip install --upgrade pip
-            pip install flake8 pylint
+            pip install flake8 pylint pylint-flask
             if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         - name: Running pylint
           run: |
-            pylint *
+            pylint --load-plugins pylint_flask *
         - name: Lint with flake8
           run: |
             # stop the build if there are Python syntax errors or undefined names
