--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,6 +8,22 @@ on:
             - dev
             - master
 jobs:
+    bandit:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - name: Set up Python 3.9
+          uses: actions/setup-python@v2
+          with:
+            python-version: 3.9
+        - name: Install dependencies
+          run: |
+            python -m pip install --upgrade pip
+            pip install bandit
+            if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        - name: Running bandit
+          run: |
+            bandit -r .
     linter:
         runs-on: ubuntu-latest
         steps:
