(Updated) Dockerimages from 3.8 to 3.9-slim

--- a/scraper/Dockerfile
+++ b/scraper/Dockerfile
@@ -1,6 +1,6 @@
 # Dockerfile for the scraper
 
-FROM python:3.8
+FROM python:3.9-slim
 WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
