--- a/iocpuller/Dockerfile
+++ b/iocpuller/Dockerfile
@@ -1,6 +1,6 @@
 # Dockerfile for the iocpuller
 
-FROM python:3.8
+FROM python:3.9-slim
 WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
