--- a/iocpusher/Dockerfile
+++ b/iocpusher/Dockerfile
@@ -1,6 +1,6 @@
 # Dockerfile for the iocpusher
 
-FROM python:3.8
+FROM python:3.9-slim
 WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
