--- a/iocextractor/Dockerfile
+++ b/iocextractor/Dockerfile
@@ -4,6 +4,7 @@ FROM python:3.9-slim
 WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
+RUN python -c "import nltk; nltk.download('punkt')"
 ADD ./datasets ./datasets
 ADD ./iocextractor ./iocextractor
 ADD ./libs ./libs
