--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 APScheduler==3.7.0
+astroid==2.6.2
 attrs==20.3.0
 beautifulsoup4==4.9.3
+breadability==0.1.20
 bs4==0.0.1
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 colorama==0.4.4
 Deprecated==1.2.12
+docopt==0.6.2
 fire==0.3.1
 Flask==1.1.2
 Flask-APScheduler==1.12.1
@@ -16,14 +19,21 @@ idna==2.10
 ioc-fanger==3.2.3
 ioc-finder==5.0.2
 iocextract==1.13.1
+isort==5.9.2
 itsdangerous==1.1.0
 Jinja2==2.11.3
+joblib==1.0.1
 jsonschema==3.2.0
 kafka-python==2.0.2
+langdetect==1.0.9
+lazy-object-proxy==1.6.0
 lxml==4.6.3
 markdown-tree-parser==0.1
 MarkupSafe==1.1.1
+mccabe==0.6.1
 mdutils==1.3.0
+nltk==3.6.2
+numpy==1.21.2
 oauthlib==3.1.1
 pdfminer==20191125
 pendulum==1.2.5
@@ -32,6 +42,9 @@ pyattck==3.0.1
 pycountry==20.7.3
 pycryptodome==3.10.1
 pyfiglet==0.8.post1
+pylint==2.9.3
+pylint-flask==0.6
+pylint-plugin-utils==0.6
 pymisp==2.4.141.1
 pyparsing==2.4.7
 PyPDF2==1.26.0
@@ -48,7 +61,10 @@ requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
 six==1.15.0
 soupsieve==2.2.1
+sumy==0.8.1
 termcolor==1.1.0
+toml==0.10.2
+tqdm==4.62.1
 tweepy==3.10.0
 tzlocal==2.1
 urllib3==1.26.6
