--- a/.pylintrc
+++ b/.pylintrc
@@ -60,7 +60,7 @@ confidence=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
-disable=E0401, R0903, C0301, W0703, R1729, R0914, R0913, W1401, E1305, C0413, C0321
+disable=E0401, R0903, C0301, W0703, R1729, R0914, R0913, W1401, E1305, C0413, C0321, C0411
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
